More deploy configs

--- a/server/instances/haproxy/load-balancer.haproxy.cfg
+++ b/server/instances/haproxy/load-balancer.haproxy.cfg
@@ -37,7 +37,7 @@ defaults
 	errorfile 504 /etc/haproxy/errors/504.http
 
 # Main frontend
-frontend grafana_frontend
+frontend lockbook_server_frontend
 	bind *:80
 	# Uncomment this after you've certbotted!
 	bind *:443 ssl crt /etc/ssl/api.prod.lockbook.net/api.prod.lockbook.net.pem
@@ -48,12 +48,13 @@ frontend grafana_frontend
 	acl letsencrypt_acl path_beg /.well-known/acme-challenge/
 	use_backend letsencrypt_backend if letsencrypt_acl
 
-	default_backend grafana_backend
+	default_backend lockbook_server_backend
 	option forwardfor
 
 backend letsencrypt_backend
 	server letsencrypt 127.0.0.1:8888
 
-backend grafana_backend
-	server main 127.0.0.1:3000
-
+backend lockbook_server_backend
+    balance roundrobin
+    # Configure Lockbook Server backends here!
+	server api-001 172.31.41.113:8000
