--- a/utils/dev/build-lockbook-debian/ppa-lockbook-desktop/debian/rules
+++ b/utils/dev/build-lockbook-debian/ppa-lockbook-desktop/debian/rules
@@ -2,20 +2,20 @@
 
 clean:
 	dh clean
-	rm -rf lockbook
 
 build:
 	dh build
-	cargo build --release --locked --manifest-path ../../../clients/linux/Cargo.toml
+	curl https://sh.rustup.rs -sSf | bash -s -- -y
+	(export PATH="/root/.cargo/bin:$$PATH" && cargo build --release --manifest-path ../../../../clients/linux/Cargo.toml)
 
 binary:
 	mkdir -p debian/lockbook-desktop/usr/bin
 	mkdir -p debian/lockbook-desktop/usr/share/applications
 	mkdir -p debian/lockbook-desktop/usr/share/pixmaps
 
-	cp ../../../clients/linux/target/release/lockbook debian/lockbook-desktop/usr/bin/lockbook-desktop
+	cp ../../../../clients/linux/target/release/lockbook debian/lockbook-desktop/usr/bin/lockbook-desktop
 	cp lockbook-desktop.desktop debian/lockbook-desktop/usr/share/applications
-	cp ../../../graphics/SVGs/dark-1.svg debian/lockbook-desktop/usr/share/pixmaps
+	cp ../../../../graphics/SVGs/dark-1.svg debian/lockbook-desktop/usr/share/pixmaps
 
 	strip --strip-all debian/lockbook-desktop/usr/bin/lockbook-desktop
 	dh_gencontrol
