--- a/utils/dev/build-lockbook-debian/ppa-lockbook/debian/control
+++ b/utils/dev/build-lockbook-debian/ppa-lockbook/debian/control
@@ -2,7 +2,7 @@ Source: lockbook
 Section: utils
 Priority: extra
 Maintainer: Smail Barkouch <smailbarkouch1@gmail.com>
-Build-Depends: debhelper, git, cargo, ca-certificates
+Build-Depends: debhelper, git, ca-certificates
 
 Package: lockbook
 Architecture: any
