--- a/utils/dev/build-lockbook-debian/ppa-lockbook/debian/rules
+++ b/utils/dev/build-lockbook-debian/ppa-lockbook/debian/rules
@@ -2,15 +2,15 @@
 
 clean:
 	dh clean
-	rm -rf lockbook
 
 build:
 	dh build
-	cargo build --release --locked --manifest-path ../../../clients/cli/Cargo.toml
+	curl https://sh.rustup.rs -sSf | bash -s -- -y
+	(export PATH="/root/.cargo/bin:$$PATH" && cargo build --release --manifest-path ../../../../clients/linux/Cargo.toml)
 
 binary:
 	mkdir -p debian/lockbook/usr/bin
-	mv ../../../clients/cli/target/release/lockbook debian/lockbook/usr/bin
+	mv ../../../../clients/cli/target/release/lockbook debian/lockbook/usr/bin
 	
 	strip --strip-all debian/lockbook/usr/bin/lockbook
 	dh_gencontrol
