Usage ledger replaced with column on file_metadata

--- a/containers/local.env
+++ b/containers/local.env
@@ -13,7 +13,7 @@ FILES_DB_BUCKET=testbucket
 FILES_DB_ACCESS_KEY=minioadmin
 FILES_DB_SECRET_KEY=minioadmin
 
-API_URL=http://lockbook_server:8000
+API_URL=http://localhost:8000
 SERVER_SCHEME=http
 SERVER_HOST=lockbook_server
 SERVER_PORT=8000
