--- a/containers/test.env
+++ b/containers/test.env
@@ -4,6 +4,8 @@ INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
 INDEX_DB_PASS=
 INDEX_DB_CERT=
+DATABASE_URL=postgres://postgres:password@indexdb/postgres
+SQLX_OFFLINE=false
 
 FILES_DB_SCHEME=http
 FILES_DB_HOST=filesdb
