--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -29,7 +29,7 @@ rust-s3 = "0.27.0-rc3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
 tokio = { version = "1.5.0", features = ["full"] }
-sqlx = { version = "0.5", features = ["macros", "postgres", "uuid", "tls", "runtime-tokio-native-tls"] }
+sqlx = { version = "0.5.2", features = ["macros", "postgres", "uuid", "tls", "runtime-tokio-native-tls", "offline"] }
 tokio-test = "0.2.1"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
 
