--- a/server/admin/Cargo.toml
+++ b/server/admin/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 structopt = "0.3.13"
 lockbook-server = { path = "../server" }
-tokio = { version = "0.2.18", features = ["full"] }
-tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
-rust-s3 = { version = "0.22.3", features = ["path-style"] }
+tokio = { version = "1.5.0", features = ["full"] }
+sqlx = { version = "0.5.2", features = ["macros", "postgres", "uuid", "tls", "runtime-tokio-native-tls", "offline"] }
+rust-s3 = "0.27.0-rc3"
 lockbook-models = { path = "../../core/libs/models" }
