--- a/containers/local.env
+++ b/containers/local.env
@@ -4,6 +4,8 @@ INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
 INDEX_DB_PASS=
 INDEX_DB_CERT=
+DATABASE_URL=postgres://postgres:password@localhost/postgres
+SQLX_OFFLINE=false
 
 FILES_DB_SCHEME=http
 FILES_DB_HOST=localhost
@@ -20,3 +22,5 @@ SERVER_PORT=8000
 MAX_AUTH_DELAY=20000
 LOG_LEVEL=info
 LOG_PATH=.
+
+PD_KEY=337b67b8ece74b0ac0f934193b76fb6
