Configurable connection pool

--- a/containers/test.env
+++ b/containers/test.env
@@ -4,6 +4,7 @@ INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
 INDEX_DB_PASS=
 INDEX_DB_CERT=
+INDEX_DB_POOL_SIZE=1
 DATABASE_URL=postgres://postgres:password@indexdb/postgres
 SQLX_OFFLINE=false
 
