--- a/core/libs/models/Cargo.toml
+++ b/core/libs/models/Cargo.toml
@@ -10,4 +10,5 @@ reqwest = { version = "0.11.1", default-features = false, features = ["blocking"
 rsa = { version = "^0.2", features = ["serde1"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11.5"
+libsecp256k1 = "0.5.0"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
