fixed android script and other scripts with cd problems

--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
-        versionName "0.2.4"
+        versionName "0.3.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,6 +30,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+	    zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
