--- a/containers/local.env
+++ b/containers/local.env
@@ -4,6 +4,7 @@ INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
 INDEX_DB_PASS=
 INDEX_DB_CERT=
+INDEX_DB_POOL_SIZE=5
 DATABASE_URL=postgres://postgres:password@localhost/postgres
 SQLX_OFFLINE=false
 
