--- a/core/libs/models/Cargo.toml
+++ b/core/libs/models/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11.5"
 libsecp256k1 = "0.5.0"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
+
+[dev-dependencies]
+bincode = "1.2.1"
