core: RSA -> Elliptic Curves (secp256k1) (#758)
* rsa -> ec + dh :: add new, sign & verify from libsecp256k1

* rsa -> ec + dh :: add sk + pk -> aes sk

* rsa -> ec + dh :: use ec signing and key gen in core

* rsa -> ec + dh :: use ec verify in server

* fmt

* fix serialize / deserialize

* android works

* test fix

* fix

* Update core/libs/models/src/account.rs

Co-authored-by: Travis Vanderstad <t.vanderstad@gmail.com>

Co-authored-by: Smail Barkouch <smailbarkouch1@gmail.com>
Co-authored-by: travis <t.vanderstad@gmail.com>

--- a/core/libs/crypto/Cargo.toml
+++ b/core/libs/crypto/Cargo.toml
@@ -10,6 +10,10 @@ aes-gcm = "0.5.0"
 bincode = "1.2.1"
 lockbook-models = { path = "../models" }
 rand = "0.7"
-rsa = { version = "^0.2", features = ["serde1"] }
-sha2 = "0.8.0"
+libsecp256k1 = "0.5.0"
+sha2 = "0.9.0"
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+uuid = { version = "0.8.1", features = ["v4", "serde"] }
+serde_json = "1.0.44"
