--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -36,7 +36,6 @@ log = "0.4.8"
 rand = "0.7"
 raqote = { version = "0.8.0", default-features = false }
 reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
-rsa = { version = "^0.2", features = ["serde1"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
 serde_bytes = "0.11.5"
@@ -52,6 +51,7 @@ debug = true
 [dev-dependencies]
 criterion = "0.3.3"
 cpuprofiler = "0.0.4"
+libsecp256k1 = "0.5.0"
 
 [[bench]]
 name = "performator"
