Author a single Cargo.toml at the project root
+ Will cause tooling to work better (cross project refactors)
+ Allows us to `cargo check --all-targets` at the project root
+ Fix broken benchmarks

--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "lockbook"
+name = "lockbook-cli"
 version = "0.2.21"
 authors = ["parth"]
 edition = "2018"
 
+[[bin]]
+name = "lockbook"
+path = "src/main.rs"
 
 [dependencies]
 lockbook-core = { path = "../../core" }
