remove .lock files from dockerfiles

--- a/containers/local.env
+++ b/containers/local.env
@@ -6,7 +6,7 @@ INDEX_DB_PASS=
 INDEX_DB_CERT=
 INDEX_DB_POOL_SIZE=5
 DATABASE_URL=postgres://postgres:password@localhost/postgres
-SQLX_OFFLINE=false
+SQLX_OFFLINE=true
 
 FILES_DB_SCHEME=http
 FILES_DB_HOST=localhost
