test_utils package to centralize all test related helper code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 
 members = [
 	"core",
+	"core/libs/crypto",
+	"core/libs/models",
+    "utils/test_utils",
 	"server/server",
 	"server/admin",
 	"clients/linux",
-	"clients/cli"
+	"clients/cli",
 ]
