--- a/containers/local.env
+++ b/containers/local.env
@@ -6,7 +6,7 @@ INDEX_DB_PASS=
 INDEX_DB_CERT=
 INDEX_DB_POOL_SIZE=5
 DATABASE_URL=postgres://postgres:password@localhost/postgres
-SQLX_OFFLINE=true
+SQLX_OFFLINE=false
 
 FILES_DB_SCHEME=http
 FILES_DB_HOST=localhost
@@ -23,5 +23,3 @@ SERVER_PORT=8000
 MAX_AUTH_DELAY=20000
 LOG_LEVEL=info
 LOG_PATH=.
-
-PD_KEY=337b67b8ece74b0ac0f934193b76fb6
