--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lockbook"
+name = "lockbook-desktop"
 version = "0.1.2"
 authors = ["steverusso <steverusso@pm.me"]
 edition = "2018"
