removed jcenter dependency and cleaned up

--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -97,7 +97,7 @@ dependencies {
     // Miscellaneous
     implementation "com.beust:klaxon:$json_parser_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation("com.journeyapps:zxing-android-embedded:$qr_embedded_version") { transitive = false }
+    implementation "com.journeyapps:zxing-android-embedded:$qr_embedded_version"
     implementation "com.google.zxing:core:$qr_core_version"
     implementation "com.michael-bull.kotlin-result:kotlin-result:$result_version"
     implementation "androidx.biometric:biometric:$fingerprint_version"
