--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         espresso_test_version = '3.3.0'
         constraint_layout_version = '2.0.4'
         material_ui_version = '1.3.0'
-        qr_embedded_version = '4.0.0'
+        qr_embedded_version = '4.2.0'
         qr_core_version = '3.3.0'
         json_parser_version = '5.5'
         coroutine_version = '1.3.9'
@@ -32,13 +32,13 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
 
@@ -51,7 +51,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
 }
