--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -4,10 +4,10 @@ buildscript {
     ext {
         test_runner_version = '1.3.0'
         gradle_version = '4.2.1'
-        core_ktx_version = '1.3.2'
-        navigation_version = '2.3.3'
+        core_ktx_version = '1.5.0'
+        navigation_version = '2.3.5'
         kotlin_version = '1.5.0'
-        appcompat_version = '1.2.0'
+        appcompat_version = '1.3.0'
         junit_version = '4.12'
         junit_test_version = '1.1.2'
         espresso_test_version = '3.3.0'
@@ -17,7 +17,7 @@ buildscript {
         qr_core_version = '3.3.0'
         json_parser_version = '5.5'
         coroutine_version = '1.3.9'
-        lifecycle_version = '2.2.0'
+        lifecycle_version = '2.3.1'
         result_version = '1.1.7'
         fingerprint_version = '1.1.0'
         dialog_version = '3.3.0'
@@ -28,6 +28,7 @@ buildscript {
         work_version = '2.5.0'
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
+        fragment_version = '1.3.0'
     }
 
     repositories {
@@ -38,7 +39,6 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:${gradle_version}"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
 
