--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -6,29 +6,31 @@ buildscript {
         gradle_version = '4.2.1'
         core_ktx_version = '1.5.0'
         navigation_version = '2.3.5'
-        kotlin_version = '1.5.0'
+        kotlin_version = '1.5.10'
+        kotlin_reflect = '1.5.10'
         appcompat_version = '1.3.0'
-        junit_version = '4.12'
+        junit_version = '4.13.2'
         junit_test_version = '1.1.2'
         espresso_test_version = '3.3.0'
         constraint_layout_version = '2.0.4'
         material_ui_version = '1.3.0'
         qr_embedded_version = '4.2.0'
-        qr_core_version = '3.3.0'
+        qr_core_version = '3.4.1'
         json_parser_version = '5.5'
         coroutine_version = '1.3.9'
+        coroutine_android_version = '1.5.0-native-mt'
         lifecycle_version = '2.3.1'
         result_version = '1.1.7'
         fingerprint_version = '1.1.0'
         dialog_version = '3.3.0'
         preference_version = '1.1.1'
         refresh_version = '1.1.0'
-        markdown_version = '4.4.0'
+        markdown_version = '4.6.2'
         logger_version = '4.7.1'
-        work_version = '2.5.0'
+        work_version = '2.6.0-alpha02'
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
-        fragment_version = '1.3.0'
+        fragment_version = '1.3.4'
     }
 
     repositories {
@@ -39,6 +41,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
 
