--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -1,13 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'androidx.navigation.safeargs'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: "org.jmailen.kotlinter"
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "app.lockbook"
@@ -30,7 +27,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-	    zipAlignEnabled true
+	        zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -57,17 +54,17 @@ android {
         }
     }
 
-    android.buildFeatures.dataBinding = true
+    android.buildFeatures.viewBinding = true
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Ui Libraries
     implementation "com.google.android.material:material:$material_ui_version"
     implementation "com.afollestad.material-dialogs:core:$dialog_version"
     implementation "androidx.preference:preference-ktx:$preference_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     // Support Libraries
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
@@ -90,7 +87,7 @@ dependencies {
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_android_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
@@ -98,8 +95,8 @@ dependencies {
 
     // Miscellaneous
     implementation "com.beust:klaxon:$json_parser_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation("com.journeyapps:zxing-android-embedded:$qr_embedded_version") { transitive = false }
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_reflect"
+    implementation "com.journeyapps:zxing-android-embedded:$qr_embedded_version"
     implementation "com.google.zxing:core:$qr_core_version"
     implementation "com.michael-bull.kotlin-result:kotlin-result:$result_version"
     implementation "androidx.biometric:biometric:$fingerprint_version"
