sharing kinda works

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="app.lockbook"
+            android:authorities="app.lockbook.fileprovider"
             android:grantUriPermissions="true"
             android:exported="false">
             <meta-data
