--- a/core/libs/crypto/Cargo.toml
+++ b/core/libs/crypto/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2018"
 [dependencies]
 aead = "0.2.0"
 aes-gcm = "0.5.0"
-bincode = "1.2.1"
-lockbook-models = { path = "../models" }
-rand = "0.7"
 libsecp256k1 = "0.5.0"
 sha2 = "0.9.0"
+hmac = "0.11.0"
+rand = "0.7"
+lockbook-models = { path = "../models" }
 serde = { version = "1.0", features = ["derive"] }
+bincode = "1.2.1"
 
 [dev-dependencies]
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
