--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -13,6 +13,7 @@ gdk-pixbuf = "0.9.0"
 glib = "0.10"
 gtk = { version = "0.9.0", features = ["v3_22"] }
 gio = { version = "", features = ["v2_44"] }
+gspell = "0.5.0"
 pango = "0.9.1"
 qrcode-generator = "*"
 serde = { version = "1.0", features = ["derive"] }
