--- a/containers/Dockerfile.linux
+++ b/containers/Dockerfile.linux
@@ -2,7 +2,7 @@ ARG HASH
 FROM debian AS linux-build
 
 RUN apt update -y
-RUN apt-get install -y build-essential curl libgtk-3-dev gtksourceview-3.0
+RUN apt-get install -y build-essential curl libgtk-3-dev gtksourceview-3.0 libgspell-1-dev
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 RUN apt update -y
 ENV PATH="/root/.cargo/bin:${PATH}"
