android: share documents (#786)
* added menubar item, exposed export drawing, and added general logical layout

* uris created

* sharing kinda works

* recursive folder sharing and clean loading screen while lockbook is processing

* cleaned up loading screen and cleared share folder after finish

* fixed sharing errors for applications like slack

* fmt and resolving conflicts

* added tests for exportdrawing

* exposed two new endpoints and added android tests

* faster share using core

* renamed error back

* fixed windows variants test fail

* share items isolated and now share is cleared differently

* simplified errors a bit

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -41,6 +41,17 @@
         <activity android:name=".screen.SettingsActivity" />
         <activity android:name=".screen.TextEditorActivity" />
         <activity android:name=".screen.LogActivity" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="app.lockbook.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files_path" />
+        </provider>
+
     </application>
 
 </manifest>
