--- a/core/Makefile
+++ b/core/Makefile
@@ -76,12 +76,12 @@ lib_c_for_swift_ios:
 lib_c_for_swift:
 	@{ command -v cargo || { echo "Y'ain't got cargo"; exit 1; } }
 	@echo "Creating header"
-	@rm ${swift_inc}lockbook_core.h || true
+	@rm ${swift_inc}lockbook_core.h || echo "no prior .h"
 	cbindgen src/c_interface.rs -l c > lockbook_core.h
 	@mkdir -p ${swift_inc}
 	cp lockbook_core.h ${swift_inc}
 	@echo "Building fat library"
-	@rm ${swift_lib}liblockbook_core.a || true
+	@rm ${swift_lib}liblockbook_core.a || echo "no prior .a"
 	cargo build --release
 	@mkdir -p ${swift_lib}
 	cp target/release/liblockbook_core.a ${swift_lib}
