--- a/utils/dev/build-lockbook-debian/ppa-lockbook/debian/control
+++ b/utils/dev/build-lockbook-debian/ppa-lockbook/debian/control
@@ -2,8 +2,10 @@ Source: lockbook
 Section: utils
 Priority: extra
 Maintainer: Smail Barkouch <smailbarkouch1@gmail.com>
-Build-Depends: debhelper, git, ca-certificates
+Standards-Version: 4.1.4
+Build-Depends: debhelper (>=10), git, ca-certificates
 
 Package: lockbook
 Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: A secure, private, minimal, cross-platform document editor.
