--- a/utils/dev/build-lockbook-debian/ppa-lockbook/debian/rules
+++ b/utils/dev/build-lockbook-debian/ppa-lockbook/debian/rules
@@ -8,6 +8,10 @@ build:
 	curl https://sh.rustup.rs -sSf | bash -s -- -y
 	(export PATH="/root/.cargo/bin:$$PATH" && cargo build --release --manifest-path ../../../../clients/cli/Cargo.toml)
 
+build-arch:
+
+build-indep:
+
 binary:
 	mkdir -p debian/lockbook/usr/bin
 	mv ../../../../target/release/lockbook debian/lockbook/usr/bin
@@ -15,3 +19,7 @@ binary:
 	strip --strip-all debian/lockbook/usr/bin/lockbook
 	dh_gencontrol
 	dh_builddeb
+
+binary-arch:
+
+binary-indep:
