--- a/clients/android/core/src/main/AndroidManifest.xml
+++ b/clients/android/core/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="app.lockbook.core"/>
+<manifest package="app.lockbook.core" />
