--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ server/server/ca-certificate.crt
 server/server/qa-ca-certificate.crt
 .idea/
 *.iml
+containers/dev-*.env
 containers/qa.env
 containers/prod.env
 containers/devtest.env
