--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -3,6 +3,7 @@ name = "lockbook-server"
 version = "0.1.1"
 authors = ["Parth <parth@mehrotra.me>"]
 edition = "2018"
+build = "build.rs"
 
 [lib]
 name = "lockbook_server_lib"
@@ -24,10 +25,14 @@ pagerduty-rs = { version = "0.1.1", features = ["sync"] }
 rust-s3 = "0.27.0-rc3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
+shadow-rs = "0.6.2"
 tokio = { version = "1.5.0", features = ["full"] }
 sqlx = { version = "0.5.2", features = ["macros", "postgres", "uuid", "tls", "runtime-tokio-native-tls", "offline"] }
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
 libsecp256k1 = "0.5.0"
+
+[build-dependencies]
+shadow-rs = "0.6.2"
 
 [dev-dependencies]
 lockbook-core = { path = "../../core" }
