--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -21,6 +21,7 @@ COPY containers/dummy.rs /core/libs/crypto/src/lib.rs
 COPY containers/dummy.rs src/main.rs
 COPY containers/dummy.rs src/lib.rs
 COPY server/server/Cargo.toml .
+COPY server/server/build.rs .
 
 # Dependency on core which has compile-time env var
 ENV API_URL=unused
