--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -10,6 +10,7 @@ jobs:
       STATUS_API_URL: https://api.prod.lockbook.net/get-build-information
       PD_API_KEY: ${{ secrets.PD_API_KEY }}
     steps:
+      - uses: actions/checkout@v2
       - name: 'Check on server'
         working-directory: utils/dev
         run: ./page_if_server_down.sh
