infra: tweak cron

--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,7 +2,7 @@ name: Monitor Server
 
 on:
   schedule:
-    - cron:  '0/5 * * * *'
+    - cron:  '*/5 * * * *'
 jobs:
   Server-Status:
     runs-on: ubuntu-latest
