--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -16,6 +16,7 @@ gio = { version = "0.9.1", features = ["v2_44"] }
 gspell = "0.5.0"
 pango = "0.9.1"
 qrcode-generator = "*"
+regex = "1.5.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 sourceview = "0.9.0"
