--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lockbook-desktop"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["steverusso <steverusso@pm.me"]
 edition = "2018"
 
@@ -16,6 +16,7 @@ gio = { version = "0.9.1", features = ["v2_44"] }
 gspell = "0.5.0"
 pango = "0.9.1"
 qrcode-generator = "*"
+regex = "1.5.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 sourceview = "0.9.0"
