--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -31,6 +31,9 @@ buildscript {
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
         fragment_version = '1.3.4'
+        sliding_pane_layout_version = '1.2.0-alpha04'
+        tree_view_version = "d051ce75f5"
+        recyclical_version = "1.1.1"
     }
 
     repositories {
