--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation "androidx.preference:preference-ktx:$preference_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.slidingpanelayout:slidingpanelayout:$sliding_pane_layout_version"
-    implementation "com.github.bmelnychuk:AndroidTreeView:$tree_view_version"
+//    implementation "com.github.bmelnychuk:AndroidTreeView:$tree_view_version"
     implementation "com.afollestad:recyclical:$recyclical_version"
 
     // Support Libraries
