--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -34,12 +34,8 @@
             android:name=".screen.NewAccountActivity" />
         <activity
             android:name=".screen.ImportAccountActivity" />
-        <activity
-            android:name=".screen.DrawingActivity"
-            android:theme="@style/Main.FullScreen" />
-        <activity android:name=".screen.ListFilesActivity" />
+        <activity android:name=".screen.MainScreenActivity" />
         <activity android:name=".screen.SettingsActivity" />
-        <activity android:name=".screen.TextEditorActivity" />
         <activity android:name=".screen.LogActivity" />
 
         <provider
