--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -27,11 +27,11 @@ buildscript {
         refresh_version = '1.1.0'
         markdown_version = '4.6.2'
         logger_version = '4.7.1'
-        work_version = '2.6.0-alpha02'
+        work_version = '2.7.0-beta01'
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
         fragment_version = '1.3.4'
-        sliding_pane_layout_version = '1.2.0-alpha04'
+        sliding_pane_layout_version = '1.2.0-beta01'
         tree_view_version = "d051ce75f5"
         recyclical_version = "1.1.0"
     }
