--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -52,6 +52,8 @@ debug = true
 criterion = "0.3.3"
 cpuprofiler = "0.0.4"
 libsecp256k1 = "0.5.0"
+variant_count = "1.1.0"
+indicatif = "0.17.0-beta.1"
 
 [[bench]]
 name = "performator"
