--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
     ext {
         test_runner_version = '1.3.0'
-        gradle_version = '4.2.1'
+        gradle_version = '7.0.3'
         core_ktx_version = '1.5.0'
         navigation_version = '2.3.5'
-        kotlin_version = '1.5.10'
+        kotlin_version = '1.5.31'
         kotlin_reflect = '1.5.10'
         appcompat_version = '1.3.0'
         junit_version = '4.13.2'
@@ -43,7 +43,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
