--- a/containers/Dockerfile.android
+++ b/containers/Dockerfile.android
@@ -3,27 +3,28 @@ ARG HASH
 FROM gradle:7.2-jdk11 AS android-build
 
 ENV DEBIAN_FRONTEND=noninteractive
-ENV ANDROID_HOME /opt/android-sdk-linux
+ENV ANDROID_HOME /opt/android-sdk
 
 # Install android things
 RUN wget -q https://dl.google.com/android/repository/android-ndk-r21c-linux-x86_64.zip -O android-ndk-r21c-linux-x86_64.zip
 RUN unzip -q android-ndk-r21c-linux-x86_64.zip
 ENV ANDROID_NDK_HOME=/android-ndk-r21c
 RUN cd /opt \
-    && wget -q https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip -O android-sdk-tools.zip \
-    && unzip -q android-sdk-tools.zip -d ${ANDROID_HOME}
-ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
-RUN yes | sdkmanager --licenses
+    && wget -q https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip -O android-cmd-line-tools.zip \
+    && unzip android-cmd-line-tools.zip -d ${ANDROID_HOME}
+    
+ENV PATH ${PATH}:${ANDROID_HOME}/cmdline-tools:${ANDROID_HOME}/cmdline-tools/latest/bin:${ANDROID_HOME}/platform-tools
+RUN yes | /opt/android-sdk/cmdline-tools/bin/sdkmanager --licenses --sdk_root=/opt/android-sdk
 
 # Copy android in
 COPY clients/android clients/android
 WORKDIR clients/android
-RUN ./gradle assemble
+RUN gradle assemble
 
 # Check formatting
 FROM android:${HASH} AS android-fmt
-RUN ./gradle lintKotlin 
+RUN gradle lintKotlin 
 
 # Check lint
 FROM android:${HASH} AS android-lint
-RUN ./gradle lint
+RUN gradle lint
