android: split screen on larger displays (#901)
* intermediate work

* almost done

* more work

* you are able to edit and draw on files with split screen

* fully functioning except for small devices

* two pane layout fully works

* fixed bugs involving rename and drawingview

* fixed back button and other bugs

* created a fragment for processing files, fixed delete bugs, optimized sliding pane layout, smoother rotation for drawingview, and more

* fixed settings bug

* updated gradle in dockerfile

* make drawing auto save work correctly

* fixed another save error and attempted to fix failing tests from gradle update

* fixed tests

* fixed kotlin interface tests

--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'androidx.navigation.safeargs'
 apply plugin: "org.jmailen.kotlinter"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "app.lockbook"
         minSdkVersion 22
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
-        versionName "0.3.6"
+        versionName "0.3.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -65,6 +65,8 @@ dependencies {
     implementation "com.afollestad.material-dialogs:core:$dialog_version"
     implementation "androidx.preference:preference-ktx:$preference_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.slidingpanelayout:slidingpanelayout:$sliding_pane_layout_version"
+    implementation "com.afollestad:recyclical:$recyclical_version"
 
     // Support Libraries
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
