--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
     ext {
         test_runner_version = '1.3.0'
-        gradle_version = '4.2.1'
+        gradle_version = '7.0.0'
         core_ktx_version = '1.5.0'
         navigation_version = '2.3.5'
-        kotlin_version = '1.5.10'
+        kotlin_version = '1.5.31'
         kotlin_reflect = '1.5.10'
         appcompat_version = '1.3.0'
         junit_version = '4.13.2'
@@ -27,10 +27,13 @@ buildscript {
         refresh_version = '1.1.0'
         markdown_version = '4.6.2'
         logger_version = '4.7.1'
-        work_version = '2.6.0-alpha02'
+        work_version = '2.7.0-beta01'
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
         fragment_version = '1.3.4'
+        sliding_pane_layout_version = '1.2.0-beta01'
+        tree_view_version = "d051ce75f5"
+        recyclical_version = "1.1.0"
     }
 
     repositories {
@@ -40,7 +43,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
