--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -54,6 +54,7 @@ indicatif = "0.17.0-beta.1"
 itertools = "0.10.1"
 libsecp256k1 = "0.7.0"
 variant_count = "1.1.0"
+num_cpus = "1.13.0"
 
 [[bench]]
 name = "performator"
