--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -22,8 +22,13 @@ services:
       '
   indexdb:
     image: postgres:12.3
+    command: >
+      -c work_mem=10GB
+      -c maintenance_work_mem=10GB
+      -c shared_buffers=10GB
+      -c max_wal_size=1GB
     environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_PASSWORD=postgres
   config_indexdb:
     image: db_with_migration-$HASH
     container_name: config_indexdb-integration-$HASH
@@ -34,7 +39,7 @@ services:
     entrypoint: >
       /bin/sh -c '\
         while ! pg_isready -h $$INDEX_DB_HOST -p $$INDEX_DB_PORT -U $$INDEX_DB_USER; do echo "Waiting for Postgres to start..." && sleep 0.2; done; \
-        psql -wq -h $$INDEX_DB_HOST -p $$INDEX_DB_PORT -U $$INDEX_DB_USER --db $$INDEX_DB_DB -f /index_db/create_db.sql && \
+        PGPASSWORD=$$INDEX_DB_PASS psql -wq -h $$INDEX_DB_HOST -p $$INDEX_DB_PORT -U $$INDEX_DB_USER --db $$INDEX_DB_DB -f /index_db/create_db.sql && \
         tail -f /dev/null
       '
   lockbook_server:
