--- a/containers/test.env
+++ b/containers/test.env
@@ -2,7 +2,7 @@ INDEX_DB_HOST=indexdb
 INDEX_DB_PORT=5432
 INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
-INDEX_DB_PASS=postgres
+INDEX_DB_PASS=
 INDEX_DB_CERT=
 INDEX_DB_POOL_SIZE=1
 DATABASE_URL=postgres://postgres:password@indexdb/postgres
