--- a/containers/test.env
+++ b/containers/test.env
@@ -2,10 +2,10 @@ INDEX_DB_HOST=indexdb
 INDEX_DB_PORT=5432
 INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
-INDEX_DB_PASS=
+INDEX_DB_PASS=postgres
 INDEX_DB_CERT=
-INDEX_DB_POOL_SIZE=1
-DATABASE_URL=postgres://postgres:password@indexdb/postgres
+INDEX_DB_POOL_SIZE=20
+DATABASE_URL=postgres://postgres:postgres@indexdb/postgres
 SQLX_OFFLINE=false
 
 FILES_DB_SCHEME=http
