--- a/containers/local.env
+++ b/containers/local.env
@@ -6,6 +6,7 @@ INDEX_DB_PASS=postgres
 INDEX_DB_CERT=
 INDEX_DB_POOL_SIZE=20
 SQLX_OFFLINE=false
+DATABASE_URL=postgres://postgres:postgres@localhost/postgres
 
 FILES_DB_SCHEME=http
 FILES_DB_HOST=localhost
