--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -32,6 +32,8 @@ tokio = { version = "1.5.0", features = ["full"] }
 sqlx = { version = "0.5.2", features = ["macros", "postgres", "uuid", "tls", "runtime-tokio-native-tls", "offline"] }
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
 libsecp256k1 = "0.7.0"
+prometheus = "0.13.0"
+convert_case = "0.4.0"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
