server: fix pagerduty
Our implementation of summary would cause panics and not report.

Until https://github.com/polyverse/pagerduty-rs/issues/4 is resolved we
have to use my fork of pagerduty.

--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -23,7 +23,7 @@ hyper = { version = "0.14.7", features = ["server"] }
 lockbook-crypto = { path = "../../core/libs/crypto" }
 lockbook-models = { path = "../../core/libs/models" }
 log = "0.4.8"
-pagerduty-rs = { version = "0.1.1", features = ["sync"] }
+pagerduty-rs = { git = "https://github.com/Parth/pagerduty-rs", features = ["sync"] }
 rust-s3 = "0.27.0-rc3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
