resolved majority of comments

--- a/containers/local.env
+++ b/containers/local.env
@@ -15,6 +15,10 @@ FILES_DB_BUCKET=testbucket
 FILES_DB_ACCESS_KEY=minioadmin
 FILES_DB_SECRET_KEY=minioadmin
 
+STRIPE_SECRET="${STRIPE_SECRET:-value from stripe dashboard}"
+STRIPE_SIGNING_SECRET="${STRIPE_SIGNING_SECRET:-get value from stripe cli or dashboard}"
+STRIPE_PREMIUM_PRICE_ID="${STRIPE_PREMIUM_PRICE_ID:-get value from products page on stripe dashboard}"
+
 API_URL=http://localhost:8000
 SERVER_SCHEME=http
 SERVER_HOST=lockbook_server
