--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -161,16 +161,6 @@ jobs:
       - name: Core-Server-DB Tests
         run: make core_server_tests_run
 
-  Server-DB:
-    runs-on: [self-hosted, dockerized]
-    needs: Run-Dev-Stack
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Server-DB
-        run: make server_tests_run
-
   Kotlin-Core:
     runs-on: [self-hosted, dockerized]
     needs: Run-Dev-Stack
@@ -203,7 +193,7 @@ jobs:
 
   Clean-Up:
     runs-on: [self-hosted, dockerized]
-    needs: [Core-Server-Db, Server-DB, Kotlin-Core, Swift-Core, CSharp-Core]
+    needs: [Core-Server-Db, Kotlin-Core, Swift-Core, CSharp-Core]
     if: always()
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
