successfully changed based branch to master and renamed tests

--- a/containers/local.env
+++ b/containers/local.env
@@ -7,6 +7,8 @@ INDEX_DB_CERT=
 INDEX_DB_POOL_SIZE=20
 SQLX_OFFLINE=false
 
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432
+
 FILES_DB_SCHEME=http
 FILES_DB_HOST=localhost
 FILES_DB_PORT=9000
