--- a/containers/test.env
+++ b/containers/test.env
@@ -8,6 +8,8 @@ INDEX_DB_POOL_SIZE=20
 DATABASE_URL=postgres://postgres:postgres@indexdb/postgres
 SQLX_OFFLINE=false
 
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432
+
 FILES_DB_SCHEME=http
 FILES_DB_HOST=filesdb
 FILES_DB_PORT=9000
