server: use redis instead of postgres (#947)
* inital structure & tx stuff figured out

* cleanup a bit

* new account done

* get public key done

* get_usage done

* get_updates done

* change_document_content done

* last endpoint wip

* removed sqlx things

* added owners to diff

* wip adding all the tree logic to a central place

* everything compiles

* full integrity checks in place

* cargo fmt

* cargo fix

* cargo fix

* fix a test

* fix a test

* update metadata version on content update

* fix tests

* fix tests

* fix more tests

* all tests passing

* remove dump file

* cargo fmt

* watch then get files

* use real redis_utils

* infra work

* wip admin client

* restore admin functionality

* fix cli

* add some docs

* correct some docs

* Apply suggestions from code review

Co-authored-by: Travis Vanderstad <t.vanderstad@gmail.com>

* travis consistency fix

Co-authored-by: Travis Vanderstad <t.vanderstad@gmail.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -148,8 +148,6 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      - name: DB Config Image
-        run: make db_container
       - name: Spin up dev stack
         run: make dev_stack_run
 
@@ -162,16 +160,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Core-Server-DB Tests
         run: make core_server_tests_run
-
-  Server-DB:
-    runs-on: [self-hosted, dockerized]
-    needs: Run-Dev-Stack
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Server-DB
-        run: make server_tests_run
 
   Kotlin-Core:
     runs-on: [self-hosted, dockerized]
@@ -205,7 +193,7 @@ jobs:
 
   Clean-Up:
     runs-on: [self-hosted, dockerized]
-    needs: [Core-Server-Db, Server-DB, Kotlin-Core, Swift-Core, CSharp-Core]
+    needs: [Core-Server-Db, Kotlin-Core, Swift-Core, CSharp-Core]
     if: always()
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
