--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -29,11 +29,13 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
 shadow-rs = "0.6.2"
 tokio = { version = "1.5.0", features = ["full"] }
-sqlx = { version = "0.5.2", features = ["macros", "postgres", "uuid", "tls", "runtime-tokio-native-tls", "offline"] }
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
 libsecp256k1 = "0.7.0"
 prometheus = "0.13.0"
 lazy_static = "1.4.0"
+deadpool-redis = "0.10.1"
+redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
+redis_utils = "0.1.1"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
